# ChangeLog for app-text/chasen
# Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/chasen/ChangeLog,v 1.1 2003/06/20 16:42:30 yakina Exp $

*chasen-2.3.1 (21 Jun 2003)

  21 Jun 2003; YAMAKURA Makoto <yakina@gentoo.org> chasen-2.3.1.ebuild,
  Manifest,ChangeLog,files/digest-chasen-2.3.1:

  Initial import. Ebuild submitted by MATSUU Takuto <matsuu@7501.net>
