@@ -1,6 +1,11 @@
 # ChangeLog for app-text/chasen
 # Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/chasen/ChangeLog,v 1.1 2003/06/20 16:42:30 yakina Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/chasen/ChangeLog,v 1.2 2003/08/03 03:50:53 matsuu Exp $
+
+*chasen-2.3.2 (03 Aug 2003)
+
+  03 Aug 2003; MATSUU Takuto <matsuu@gentoo.org> chasen-2.3.2.ebuild:
+  version bump.
 
 *chasen-2.3.1 (21 Jun 2003)
 
